examples/test/testpolicy1189.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1189
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key18: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value26
      podSelector:
        matchLabels:
          key37: value18
          key30: value25
          key47: value22
